test/valid/60294_precedence/precedence.mag
-- Author: 60294, Pedro Rosa
fun main(_): Unit -> Unit = 
    print(2 ^ 3 ^ 2)