test/invalid-syntax/57163_no_equals_after_function/no_equals_after_function.mag
-- Author: 57163, Guilherme Dias
-- No equals after function
fun noEquals (_) : Unit -> Unit 
	print(1242*2)
